--- a/public/index.css
+++ b/public/index.css
@@ -222,10 +222,12 @@ body {
 .todo-list li label .created {
 	font-size: 13px;
 	color: gray;
+	width: 100px;
 }
 
 .todo-list li label .description {
 	word-break: break-all;
+	font-size: 13px;
 	display: block;
 	line-height: 1.2;
 	transition: color 0.4s;
@@ -239,7 +241,7 @@ body {
 }
 
 .todo-list li .icon {
-	position: absolute;
+	/*position: absolute;*/
 	top: 0;
 	bottom: -3px;
 	width: 30px;
@@ -278,6 +280,77 @@ body {
 
 .todo-list li.editing:last-child {
 	margin-bottom: -1px;
+}
+.todo-list li .icon {
+	width: 30px;
+	height: 40px;
+	font-size: 34px;
+	color: #cc9a9a;
+	margin: auto 0;
+	transition: color 0.2s ease-out;
+	cursor: pointer;
+}
+
+.todo-list li .icon:hover {
+	color: #af5b5e;
+}
+
+.todo-list li .icon-destroy {
+	position: absolute;
+	top: 0;
+	bottom: -3px;
+	right: 10px;
+}
+
+.todo-list li .icon-destroy:after {
+	content: '×';
+}
+
+.todo-list li .icon-edit {
+	position: absolute;
+	top: 0;
+	bottom: -3px;
+	font-size: 19px;
+	right: 45px;
+}
+
+.todo-list li .icon-edit:after {
+	content: '✎';
+}
+
+.todo-list li .icon-pause,
+.todo-list li .icon-play {
+	font-size: 18px;
+	width: 18px;
+	height: 18px;
+	margin-right: 5px;
+}
+
+.todo-list li .icon-play {
+	font-size: 15px;
+}
+
+.icon-pause:after {
+	content: '⏸';
+	
+}
+
+.icon-play:after {
+	content: '▶';
+}
+.todo-list li label .title {
+	width: 200px;
+	word-break: break-all;
+	display: block;
+	line-height: 1.2;
+	transition: color 0.4s;
+	font-weight: 400;
+	color: #4d4d4d;
+}
+
+.todo-list li.completed label .title {
+	color: #cdcdcd;
+	text-decoration: line-through;
 }
 
 .footer {
@@ -384,6 +457,47 @@ html .clear-completed:active {
 .info a:hover {
 	text-decoration: underline;
 }
+
+.new-todo-form {
+	display: flex;
+	margin-bottom: 0;
+}
+
+.new-todo,
+.new-todo-form .new-todo-form__timer,
+.edit {
+	position: relative;
+	margin: 0;
+	width: 100%;
+	font-size: 24px;
+	font-family: inherit;
+	font-weight: inherit;
+	line-height: 1.4em;
+	color: inherit;
+	padding: 6px;
+	border: 1px solid #999;
+	box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+	box-sizing: border-box;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.new-todo-form__timer {
+	padding: 16px 16px 16px 60px;
+	border: none;
+	background: rgba(0, 0, 0, 0.003);
+	box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
+}
+
+.new-todo {
+	width: 70%;
+}
+
+.new-todo-form .new-todo-form__timer {
+	width: 15%;
+	padding-left: 16px;
+}
+
 
 /*
 	Hack to remove background from Mobile Safari.
